<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".trabajadores">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="943dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/PisosBtn"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:background="#549aab"
                    android:gravity="center|center_vertical"
                    android:text="@string/Cambio"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="#2E2828" />

                <Button
                    android:id="@+id/emergenciaButton"
                    android:layout_width="194dp"
                    android:layout_height="51dp"
                    android:layout_gravity="left"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:background="#f1802d"
                    android:text="@string/emergencia"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#3D3838"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cambiar_trabajadores"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:text="@string/edificio_a"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txtTrabajadorA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/TrabajadorPiso1"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:text="@string/edificio_b"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txtTrabajadorB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/TrabajadorPiso2"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:text="@string/edificio_c"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txtTrabajadorC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/TrabajadorPiso3"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:text="@string/edificio_d"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txtTrabajadorD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/TrabajadorPiso4"
                        android:inputType="textPersonName" />
                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="88dp" />

            <Button
                android:id="@+id/aceptarbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/aceptar" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="73dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/back0"
            android:layout_width="53dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:background="@null"
            android:scaleType="fitStart"
            app:srcCompat="@mipmap/ic_flechita_round" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
