<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/registro"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/txtEmailRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="87dp"
                android:layout_marginLeft="87dp"
                android:layout_marginTop="83dp"
                android:layout_marginEnd="87dp"
                android:layout_marginRight="87dp"
                android:ems="10"
                android:hint="@string/emalhint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/txtContraRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="87dp"
                android:layout_marginLeft="87dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="87dp"
                android:layout_marginRight="87dp"
                android:ems="10"
                android:hint="@string/passwordhint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/registroButtonregistro"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="200dp"
                android:gravity="center"
                android:text="@string/registrarse"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/logInButtonRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ya_tengo_una_cuenta" />


        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>