<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".pisosA">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/PisosBtn"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:background="#549aab"
            android:gravity="center|center_vertical"
            android:text="@string/pisos"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#2E2828" />

        <Button
            android:id="@+id/emergenciaButton"
            android:layout_width="194dp"
            android:layout_height="51dp"
            android:layout_gravity="left"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="#f1802d"
            android:text="@string/emergencia"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#3D3838"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="430dp"
        android:layout_height="833dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/edificio_a"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#000000" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="13dp" />

            <Button
                android:id="@+id/btnPiso1A"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:background="#123740"
                android:freezesText="false"
                android:gravity="center"
                android:text="@string/Piso1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="13dp" />

            <Button
                android:id="@+id/btnPiso2A"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:background="#145564"
                android:gravity="center"
                android:text="@string/Piso2"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="11dp" />

            <Button
                android:id="@+id/btnPiso3A"
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:layout_gravity="center"
                android:background="#123740"
                android:gravity="center"
                android:text="@string/Piso3"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="73dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="53dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:background="@null"
            android:scaleType="fitStart"
            app:srcCompat="@mipmap/ic_flechita_round" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>